--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -57,6 +57,9 @@ bind -n M-L next-window
 set -g @catppuccin_flavour 'mocha'
 # set -g @tokyonight_style 'night'
 
+# Where TPM should install plugins
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins'
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
@@ -65,11 +68,10 @@ set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 # set -g @plugin 'folke/tokyonight.nvim'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
 
 # set-option -g status-style "bg=red,fg=blue"
 set -g @catppuccin_window_tabs_enabled off
-
 
 # set vi-mode
 set-window-option -g mode-keys vi
@@ -80,3 +82,4 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
